--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
         </tr>
         <tr class ="footer-row">
             <td colspan="2" class="footer-col">
-                <h4>OWNED BY ROHIT AND SUMIT FHARZI</h4>
+                <h4>OWNED BY ROHIT LODHI   </h4>
                 <h5>@ 2024. DOLLOP INFOTECH PVT LTD. ALL RIGHTS RESERVED</h5>
             </td>
         </tr>
